--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet"  type="text/css">
+    <link href="style.css" rel="stylesheet"  type="text/css">
     <title>Meu Formulario</title>
 </head>
 <body>
